--- a/index.html
+++ b/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B10 Asngmnt-2</title>
+     <style> 
+       .cheak{
+        border: 1px solid yellow;
+       }
+
+    </style>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body class="inter-font">
+    <header class="header">
+        <nav class="">
+            <div class="cheak navbar display_flex">
+                <h2 class="brand_name inter-font">Fitness</h2>
+                <ul class="brand_links display_flex">
+                    <li class="links"><a href="" class="link home_border">Home</a></li>
+                    <li class="links"><a href="" class="link">Service</a></li>
+                    <li class="links"><a href="" class="link">Contact</a></li>
+                    <li class="links"><a href="" class="link">About</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div>
+            <h2><span class="brand_title">Get body in</span> <span class="brand_sub">shape</span><span class="brand_title"> & stay healthy</span></h2>
+            <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+            <div>
+                <button>
+                    Join Club Now!
+                </button>
+                <button>
+                    Download App
+                </button>
+            </div>
+
+        </div>
+        <!-- <div> 
+            <img src="img/Images 2.png" alt="">
+        </div>-->
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
